# KNCC_EXCEL

./: .gitignore  delete_users.sql  docker-compose.yml  fetch_test.js  fix_identities.sql  jobs.json  package-lock.json  pyproject.toml  recover.py  render.yaml  run.json  supabase_schema.sql  test_login.js  vercel.json
.github/workflows/: cd.yml  ci.yml  deploy-vercel.yml  main.yml
Client/: Client_Requirments_Doc.xlsx  Client_Requirments_Doc_BACKUP.xlsx  KNCC_Combined_Business_Requirements.docx
backend_legacy/: index.py
legacy_scripts/: analyze_pdfs.py  compare_excel.py  deep_excel_analysis.py  generate_requirements.py  gui_app.py  pdf_parser.py  read_cobia_full.py  read_dates.py  read_docx.py  read_pdfs.py  read_pdfs2.py  read_vpos.py  test_pdfplumber.py  validate_output.py  verify_excel.py
platform/backend/: Dockerfile  migrate_to_supabase.py  requirements.txt  test_e2e.py
platform/backend/app/: config.py  database.py  dependencies.py  main.py
platform/backend/app/core/: security.py
platform/backend/app/models/: __init__.py  activity.py  delivery.py  document.py  inventory.py  user.py  (+5 more)
platform/backend/exports/: Cobia_Cove_Apartments_Requirements.xlsx  Willow_Way_Village_Requirements.xlsx
platform/frontend/: create_demo.cjs  eslint.config.js  index.html  package-lock.json  package.json  seed_demo.js  vite.config.js
platform/frontend/src/: App.jsx  index.css  main.jsx  supabaseClient.js
supabase/: schema.sql
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260629000001_storage.sql  20260629000002_materials.sql
(+68 files in other folders)
