[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi==0.115.0", "uvicorn[standard]==0.30.0", "sqlalchemy==2.0.35", "pydantic==2.9.0", "python-multipart==0.0.9", "pdfplumber==0.11.0", "openpyxl==3.1.5", "aiofiles==24.1.0", "psycopg2-binary==2.9.9", "python-jose[cryptography]==3.3.0", "bcrypt==4.1.2", "email-validator==2.1.1" ]
requires-python = ">=3.12"
